adicionar página minha conta. alterações na página do login

--- a/assets/template/user_cooperativa/desafios.html
+++ b/assets/template/user_cooperativa/desafios.html
@@ -73,8 +73,8 @@
                 </button>
 
                 <div class="dropdown-menu dropdown-menu-right">
-                  <div class="dropdown-item-text">Nome do usuário</div>
-                  <div class="dropdown-item-text">usuario@email.com</div>
+                  <div class="dropdown-item-text">Nome do ecoponto</div>
+                  <div class="dropdown-item-text">ecoponto@email.com</div>
                   <hr style="border-top: 2px solid #1EBFA1">
                   <a href="desafios.html" class="dropdown-item">Meus desafios</a>
                   <a href="my-account.html" class="dropdown-item">Minha conta</a>
@@ -93,8 +93,8 @@
 
           <nav class="d-md-none">
             <ul class="site-menu js-clone-nav mx-auto d-none">
-              <li class="dropdown-item-text pt-4" style="border-top: 2px solid #1EBFA1">Nome do usuário</li>
-              <li class="dropdown-item-text">usuario@email.com</li>
+              <li class="dropdown-item-text pt-4" style="border-top: 2px solid #1EBFA1">Nome do ecoponto</li>
+              <li class="dropdown-item-text">ecoponto@email.com</li>
               <li>
                 <a href="desafios.html" class="dropdown-item">Meus desafios</a>
               </li>
@@ -175,7 +175,7 @@
             </div>
           </div>
 
-          <div class="form-row justify-content-around">
+          <div class="form-row justify-content-between">
             <div class="col-md-5 mb-3 mb-md-0">
               <label for="img">Selecionar imagem</label>
               <input type="file" class="form-control-file" id="img">
@@ -240,103 +240,6 @@
       </div>
     </div>
 
-
-    <div class="site-section bd-light">
-      <div class="container">
-
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary">Desafios Disponíveis</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular">
-                <div class="text-primary">Título</div>
-              </h2>
-              <div class="meta mb-4">Nome da empresa
-                <span class="mx-2">&bullet;</span>Tipo de lixo
-                <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular">
-                <div class="text-primary">Título</div>
-              </h2>
-              <div class="meta mb-4">Nome da empresa
-                <span class="mx-2">&bullet;</span>Tipo de lixo
-                <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular">
-                <div class="text-primary">Título</div>
-              </h2>
-              <div class="meta mb-4">Nome da empresa
-                <span class="mx-2">&bullet;</span>Tipo de lixo
-                <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular">
-                <div class="text-primary">Título</div>
-              </h2>
-              <div class="meta mb-4">Nome da empresa
-                <span class="mx-2">&bullet;</span>Tipo de lixo
-                <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular">
-                <div class="text-primary">Título</div>
-              </h2>
-              <div class="meta mb-4">Nome da empresa
-                <span class="mx-2">&bullet;</span>Tipo de lixo
-                <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-            <div class="h-entry">
-              <img src="../images/blog_1.jpg" alt="Image" class="img-fluid">
-              <h2 class="font-size-regular">
-                <div class="text-primary">Título</div>
-              </h2>
-              <div class="meta mb-4">Nome da empresa
-                <span class="mx-2">&bullet;</span>Tipo de lixo
-                <span class="mx-2">&bullet;</span>Jan 18, 2019</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container text-center pb-1">
-        <div class="row">
-          <div class="col-12">
-            <p class="custom-pagination">
-              <span>1</span>
-              <a href="#">2</a>
-              <a href="#">3</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
 
 
     <footer class="site-footer">
