--- a/assets/template/user_public/login.html
+++ b/assets/template/user_public/login.html
@@ -135,6 +135,22 @@
 
               <div class="form-group">
                 <div class="form-check">
+                  <input class="form-check-input" type="radio" name="usuario" id="usuario" value="usuario" checked>
+                  <label class="form-check-label" for="usuario">
+                    Cidadão
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="cooperativa" id="cooperativa" value="cooperativa">
+                  <label class="form-check-label" for="cooperativa">
+                    Cooperativa
+                  </label>
+                </div>
+              </div>
+              
+
+              <div class="form-group">
+                <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                   <label class="form-check-label" for="invalidCheck">
                     Concordo com os <a href="">termos e condições</a>
