--- a/assets/template/user_cooperativa/my-account.html
+++ b/assets/template/user_cooperativa/my-account.html
@@ -36,7 +36,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
     
-    <header class="site-navbar py-2" role="banner">
+    <header class="site-navbar py-2" role="banner" style="background-color: #333333;">
 
       <div class="container">
         <div class="row align-items-center">
@@ -87,125 +87,58 @@
       </div>
     </header>
 
-  
-
-    <div class="site-blocks-cover overlay" style="background-image: url(../images/hero_bg_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
-      <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
-          <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light mb-5 text-uppercase font-weight-bold">Bonificação por meio do descarte correto</h1>
-          </div>
-        </div>
-      </div>
-    </div>  
-
     
 
-    <div class="container">
-      <div class="row align-items-center no-gutters align-items-stretch overlap-section">
-        <div class="col-md-4">
-          <div class="feature-1 pricing h-100 text-center">
-            <div class="icon">
-              <span class="icon-puzzle-piece"></span>
-            </div>
-            <a href="desafios.html">
-              <h2 class="my-4 heading">Cadastrar novo desafio</h2>
-            </a>
-            <p>Adicione novos desafios.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="feature-3 pricing h-100 text-center">
-            <div class="icon">
-              <span class="icon-settings"></span>
-            </div>
-            <a href="my-account.html">
-              <h2 class="my-4 heading">Minha Conta</h2>
-            </a>
-            <p>Edite as configurações da sua conta do Recicle.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="feature-1 pricing h-100 text-center">
-            <div class="icon">
-              <span class="icon-map-marker"></span>
-            </div>
-            <a href="ecopontos.html">
-              <h2 class="my-4 heading">Ecopontos</h2>
-            </a>
-            <p>Veja as cooperativas proximas de você.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  
-    
     <div class="site-section">
-      <div class="container">
-
+      <div class="container mt-5">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary">Bonificações</h2>
+            <h2 class="font-weight-light text-primary">Editar conta</h2>
           </div>
         </div>
 
-        <div class="row justify-content-around">
+        <form action="#" class="p-5 bg-white">
+          <div class="row form-group">
+            <div class="col-md-6 mb-3 mb-md-0">
+              <label class="text-black" for="nome">Nome</label>
+              <input type="text" id="nome" class="form-control">
+            </div>
 
-          <div class="col-md-5 align-self-center">
-            <div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
+            <div class="col-md-6 mb-3 mb-md-0">
+              <label class="text-black" for="email">E-mail</label>
+              <input type="email" id="email" class="form-control">
             </div>
           </div>
-
-          <div class="col-md-4 slide-one-item owl-carousel">
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="https://pbs.twimg.com/profile_images/661888424073367552/pSK6r19h_400x400.png" alt="Image">
-              </figure>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="../images/xbox.png" alt="Image">
-              </figure>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="../images/spot.png" alt="Image">
-              </figure>
-            </div>
-
-            <div class="d-flex justify-content-center">
-              <figure style="width:250px;">
-                <img src="../images/uber.png" alt="Image">
-              </figure>
-            </div>
-
-          </div>
-        </div>
         
-      </div>
-    </div>
+          <div class="row form-group">
+            <div class="col-md-6 mb-3 mb-md-0">
+              <label class="text-black" for="cpf">CPF</label>
+              <input type="text" id="cpf" class="form-control">
+            </div>
 
-
-
-    <div class="site-section" style="background-color: #98989833;">
-      <div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center border-primary">
-            <h2 class="font-weight-light text-primary">Lixos mais descartados</h2>
+            <div class="col-md-6 mb-3 mb-md-0">
+              <label class="text-black" for="cep">CEP</label>
+              <input type="text" id="cep" class="form-control">
+            </div>
           </div>
-        </div>
-        <div class="row align-items-stretch">
-          <div class="d-flex justify-content-center">
-          <figure style="width: 90%;">
-              <img src="../images/lixo.png" alt="Imagem com os lixos mais descartados" class="img-fluid">
-            </figure>
+        
+          <div class="row form-group">
+            <div class="col-md-6 mb-3 mb-md-0">
+              <label class="text-black" for="senha">Senha</label>
+              <input type="password" id="senha" class="form-control">
+            </div>
+            <div class="col-md-6 mb-3 mb-md-0">
+              <label class="text-black" for="conf-senha">Confirmar senha</label>
+              <input type="password" id="conf-senha" class="form-control">
+            </div>
           </div>
-
-        </div>
+        
+          <div class="row form-group">
+            <div class="col-md-12">
+              <input type="submit" value="Enviar" class="btn btn-primary py-2 px-4 text-white">
+            </div>
+          </div>
+        </form>
       </div>
     </div>
 
