adding ecopontos.html to the project

--- a/assets/template/css/style.css
+++ b/assets/template/css/style.css
@@ -1391,3 +1391,18 @@ h1, h2, h3, h4, h5,
 .custom-pagination span {
   background: #e6e6e6;
   color: #000; }
+
+/*Mapa dos ecopontos*/
+.map-container {
+overflow:hidden;
+padding-bottom:56.25%;
+position:relative;
+height:0;
+}
+.map-container iframe {
+left:0;
+top:0;
+height:100%;
+width:100%;
+position:absolute;
+}
