--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1442,3 +1442,14 @@ h1, h2, h3, h4, h5,
   color: #02A575;
   font-size: 18px;
 }
+
+/* Cor do tooltip */
+.tooltip-inner {
+  background-color: #E0E0E0;
+  color: black;
+  font-size: 16px;
+}
+.tooltip.bs-tooltip-right .arrow:before {
+  border-right-color: #E0E0E0 !important;
+  color: black;
+}
