--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1590,18 +1590,23 @@ h1, h2, h3, h4, h5,
   color: var(--text-footer);
 }
 
-.form-row label {
+.form-row label,
+.form-group label {
   font-weight: 600;
   color: var(--gray);
 }
 
-.form-row select {
+.form-row select,
+.form-group input,
+.form-group textarea {
   border-radius: 10px;
   border: 3px solid var(--gray);
 }
 
-.form-row select:focus {
-  border: 3px solid var(--green-light);
+.form-row select:focus,
+.form-group input:focus,
+.form-group textarea:focus {
+  border-color: var(--green-light);
 }
 
 .desafio-item {
@@ -1618,4 +1623,8 @@ h1, h2, h3, h4, h5,
 .status-desafio .ativo {
   color: var(--green-light) !important;
   margin-left: 2px;
+}
+
+.icons-redes-sociais span {
+  font-size: 24px;
 }
