--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1447,19 +1447,8 @@ h1, h2, h3, h4, h5,
   background: #e6e6e6;
   color: #000; }
 
-/*Mapa dos ecopontos*/
-.map-container {
-  overflow:hidden;
-  padding-bottom:56.25%;
-  position:relative;
-  height:0;
-}
-.map-container iframe {
-  left:0;
-  top:0;
-  height:100%;
-  width:100%;
-  position:absolute;
+#mapid {
+  height: 500px;
 }
 
 /*Ícones*/
