updating 'add challenge' page styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1629,6 +1629,8 @@ h1, h2, h3, h4, h5,
 }
 
 .form-row select,
+.form-row input:not(input[type="button"]):not(input[type="submit"]),
+.form-row textarea,
 .form-group input:not(input[type="button"]):not(input[type="submit"]),
 .form-group textarea,
 .form-select {
@@ -1637,6 +1639,8 @@ h1, h2, h3, h4, h5,
 }
 
 .form-row select:focus,
+.form-row input:not(input[type="button"]):not(input[type="submit"]):focus,
+.form-row textarea:focus,
 .form-group input:focus,
 .form-group textarea:focus,
 .form-select:focus {
