--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1451,6 +1451,22 @@ h1, h2, h3, h4, h5,
   height: 500px;
 }
 
+.text-popup-map {
+  font-family: 'Montserrat';
+  font-size: 0.8rem;
+  color: #1c1c1c;
+}
+
+.leaflet-popup-content-wrapper {
+  box-shadow: 0px 3px 14px 0px rgba(0,0,0,0.2) !important;
+ -webkit-box-shadow: 0px 3px 14px 0px rgba(0,0,0,0.2) !important;
+ -moz-box-shadow: 0px 3px 14px 0px rgba(0,0,0,0.2) !important;
+}
+
+.leaflet-popup-content {
+  margin: 17px 25px !important;
+}
+
 /*Ícones*/
 .icon-desafio {
   border: 2px solid var(--green);
